[gd_scene load_steps=4 format=3 uid="uid://b7o8cjcb7jpmr"]

[ext_resource type="Script" path="res://src/map/shop.gd" id="1_2kuu5"]
[ext_resource type="PackedScene" uid="uid://bk7qns1che2xa" path="res://src/map/blank_card.tscn" id="2_2833r"]

[sub_resource type="LabelSettings" id="LabelSettings_ia3gg"]
line_spacing = 12.0
font_size = 96

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2kuu5")

[node name="OfferArea" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2

[node name="Units" type="GridContainer" parent="OfferArea"]
layout_mode = 2
columns = 4

[node name="Spells" type="GridContainer" parent="OfferArea"]
layout_mode = 2
columns = 4

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.05
anchor_right = 0.7
anchor_bottom = 0.25
grow_horizontal = 2
text = "Welcome to the shop!"
label_settings = SubResource("LabelSettings_ia3gg")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LeaveShopButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.2
anchor_bottom = 0.2
theme_override_font_sizes/font_size = 48
text = "Leave shop"

[node name="BlankCard" parent="." instance=ExtResource("2_2833r")]
layout_mode = 2
offset_left = 960.0
offset_top = 646.0
offset_right = 1152.0
offset_bottom = 902.0

[connection signal="pressed" from="LeaveShopButton" to="." method="_on_leave_shop_button_pressed"]
